--- a/README.Rmd
+++ b/README.Rmd
@@ -16,9 +16,10 @@ knitr::opts_chunk$set(
 # robsidian
 
 <!-- badges: start -->
+
 <!-- badges: end -->
 
-The goal of robsidian is to ...
+The goal of robsidian is to implement a simple interface to Obsidian's API. This package is still in development and not yet on CRAN.
 
 ## Installation
 
@@ -31,7 +32,7 @@ pak::pak("edgar-treischl/robsidian")
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+In order to use the package, you need to set the environment variable `robsidian_dir` to the path of your Obsidian vault. This can be done with the following code:
 
 ```{r example}
 library(robsidian)
@@ -39,3 +40,12 @@ Sys.setenv(robsidian_dir = "~/Documents/GitHub/documentation")
 Sys.getenv("robsidian_dir")
 ```
 
+The package provide the Obsidian preview app as R Studio addin. You can use it to preview the current R Markdown document in Obsidian.
+
+![](man/figures/app.png)
+
+The addin runs:
+
+```{r, eval = FALSE}
+robsidian::obsidian_addin()
+```
